# cz-eli-mcp

./: .gitignore  .mcp.json.example  CONSTITUTION.md  DISCOVERY.md  Dockerfile  README.md  pyproject.toml  server.json
src/cz_eli_mcp/: __init__.py  audit.py  cache.py  citations.py  client.py  models.py  server.py
tests/: test_instructions_drift.py  test_parse.py  test_smoke.py
tests/fixtures/: act_2019_110_fragments.json  act_2019_110_meta.json
