[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cz-eli-mcp"
version = "0.1.0"
description = "MCP server for the Czech e-Sbirka legal database (e-sbirka.gov.cz) via SPARQL - search and fetch Czech consolidated legislation with national ELI identifiers and verifiable citations."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Matematic Solutions", email = "kontakt@matematic.co" },
    { name = "Wieslaw Mazur", email = "mazur.wieslaw2022@gmail.com" },
]
keywords = ["mcp", "legaltech", "czech", "eli", "e-sbirka", "sparql", "law"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "diskcache>=5.6",
    "anyio>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Repository = "https://github.com/matematicsolutions/cz-eli-mcp"
Issues = "https://github.com/matematicsolutions/cz-eli-mcp/issues"
Homepage = "https://matematic.co"

[project.scripts]
cz-eli-mcp = "cz_eli_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cz_eli_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# INSTRUCTIONS is a long-form operational prose string shown to the LLM
"src/cz_eli_mcp/server.py" = ["E501"]
# Czech RDF predicate IRIs (with diacritics) live verbatim in the SPARQL query strings
"src/cz_eli_mcp/client.py" = ["E501", "RUF001"]
# VOCAB IRI constant carries Czech diacritics (slovník.gov.cz/datový)
"src/cz_eli_mcp/citations.py" = ["RUF001"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["diskcache.*", "fastmcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
